# SSR2Mihomo

./: CMakeLists.txt  README.md
docs/superpowers/plans/: 2026-05-07-ssr-mihomo.md
include/ssr2mihomo/: encoding.h  fetcher.h  mihomo.h  ssr.h  subscription.h  types.h  vmess.h
src/: encoding.cpp  fetcher.cpp  main.cpp  mihomo.cpp  ssr.cpp  subscription.cpp  vmess.cpp
tests/: test_ssr2mihomo.cpp
